# IDP

./: .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT  GeneralUtils.hpp  GlobalData.cpp  GlobalData.hpp  IdpException.hpp  Makefile  Makefile.am  ModelExpansion.cpp  ModelExpansion.hpp  OptionsStack.cpp  OptionsStack.hpp  PropagatorFactory.cpp  PropagatorFactory.hpp  README  README.md  TODO  TheoryMutatingVisitor.cpp  TheoryMutatingVisitor.hpp  TheoryVisitor.cpp  TheoryVisitor.hpp  builtin.cc  builtin.cpp  builtin.h  builtin.hpp  checker.cpp  checker.hpp  clconst.hpp  common.cc  common.cpp  common.hpp  commontypes.hpp  configure.ac  data.cpp  data.hpp  ecnf.cc  ecnf.cpp  ecnf.h  (+79 more)
docs/official/: CMakeLists.txt  comments.tex  errors.tex  fo-idp.tex  idp-latex.tex  idp-manual.tex  idp2.tex  includes.tex  installing_and_running.tex  namespaces.tex  options.tex  procedures.tex  queries.tex  structures.tex  terms.tex  theories.tex  tutorial.tex  vocabularies.tex
lib/gtestparser/: CMakeLists.txt  Main.cpp  ecnfparser.ypp  ecnftoken.lpp
lib/linenoise/: CMakeLists.txt  Makefile.am  linenoise.cpp  linenoise.h
lib/multiprocessrun/: CMakeLists.txt  multiprocessrun.cpp
parser/: Makefile.am  clconst.hpp  lex.ll  parser.yy  yyltype.hpp
src/: Assert.h  Assert.hpp  CMakeLists.txt  GeneralUtils.hpp  GlobalData.cpp  GlobalData.hpp  IdpException.hpp  IncludeComponents.hpp  Makefile.am  common.cpp  common.hpp  commontypes.hpp  ecnf.cpp  ecnf.hpp  error.cpp  error.hpp  insert.cpp  insert.hpp  interactive.hpp  internalargument.cpp  internalargument.hpp  luaconnection.cpp  luaconnection.hpp  main.cpp  namespace.cpp  namespace.hpp  options.cpp  options.hpp  parseinfo.cpp  parseinfo.hpp  rungidl.cpp  structure.cpp  structure.hpp  symmetry.cpp  symmetry.hpp  term.cpp  term.hpp  theory.cpp  theory.hpp  vocabulary.cpp  (+1 more)
src/commands/: allcommands.cpp  allcommands.hpp  calculatedefinitions.hpp  clean.hpp  clone.hpp  commandinterface.hpp  createrange.hpp  entails.hpp  ground.hpp  help.hpp  idptype.hpp  iterators.hpp  mergetheories.hpp  modelexpand.hpp  newoptions.hpp  newstructure.hpp  printblocks.hpp  printdomainatom.hpp  printoptions.hpp  propagate.hpp  query.hpp  setatomvalue.hpp  settablevalue.hpp  setvocabulary.hpp  simplify.hpp  structureproperties.hpp  tablesize.hpp  transformations.hpp  twovaluedextensions.hpp
src/creation/: cppinterface.cpp  cppinterface.hpp
src/data/: idp_intern.idp
src/errorhandling/: IdpException.cpp  IdpException.hpp  UnsatException.hpp  error.cpp  error.hpp
src/fobdds/: CommonBddTypes.hpp  EstimateBDDInferenceCost.hpp  Estimations.cpp  Estimations.hpp  FoBdd.cpp  FoBdd.hpp  FoBddAggKernel.hpp  FoBddAggKernels.hpp  FoBddAggTerm.hpp  FoBddAtomKernel.hpp  FoBddDomainTerm.hpp  FoBddFactory.cpp  FoBddFactory.hpp  FoBddFuncTerm.hpp  FoBddIndex.hpp  FoBddKernel.hpp  FoBddKernels.cpp  FoBddManager.cpp  FoBddManager.hpp  FoBddQuantKernel.hpp  FoBddSetExpr.cpp  FoBddSetExpr.hpp  FoBddTerm.hpp  FoBddTerms.cpp  FoBddUtils.cpp  FoBddUtils.hpp  FoBddVariable.cpp  FoBddVariable.hpp  FoBddVisitor.cpp  FoBddVisitor.hpp
src/generators/: AbsValueChecker.hpp  AggregateGenerator.cpp  AggregateGenerator.hpp  ArithmeticOperatorsChecker.hpp  ArithmeticOperatorsGenerator.hpp  BDDBasedGeneratorFactory.cpp  BDDBasedGeneratorFactory.hpp  BasicCheckers.hpp  BasicCheckersAndGenerators.hpp  BasicGenerators.hpp  BinaryArithmeticOperatorsChecker.hpp  BinaryArithmeticOperatorsCheckersAndGenerators.cpp  BinaryArithmeticOperatorsGenerator.hpp  ComparisonGenerator.cpp  ComparisonGenerator.hpp  EnumLookupGenerator.cpp  EnumLookupGenerator.hpp  FalseQuantKernelGenerator.hpp  GeneratorFactory.cpp  GeneratorFactory.hpp  GeneratorNodes.hpp  InstGenerator.cpp  InstGenerator.hpp  InverseAbsValueGenerator.hpp  InverseInstGenerator.hpp  InverseUnaFunctionGenerator.cpp  InverseUnaFunctionGenerator.hpp  InvertNumericGenerator.hpp  LookupGenerator.hpp  QuantKernelGenerators.cpp  QuantKernelGenerators.hpp  SimpleFuncGenerator.cpp  SimpleFuncGenerator.hpp  SortGenAndChecker.cpp  SortGenAndChecker.hpp  SortInstGenerator.hpp  SortLookupGenerator.hpp  TableCheckerAndGenerators.cpp  TableCheckerAndGenerators.hpp  TableGenerator.hpp  (+7 more)
src/groundtheories/: AbstractGroundTheory.cpp  AbstractGroundTheory.hpp  GroundPolicy.cpp  GroundPolicy.hpp  GroundTheory.cpp  GroundTheory.hpp  IDP2ECNF.hpp  PrintGroundPolicy.hpp  SolverPolicy.cpp  SolverPolicy.hpp  SolverTheory.hpp
src/inferences/: CalculateDefinitions.cpp  Entails.cpp  Entails.hpp  InferenceSolverConnection.cpp  InferenceSolverConnection.hpp  Query.cpp  Query.hpp  SolverConnection.cpp  SolverConnection.hpp  SolverInclude.hpp
src/lua/: luaconnection.cpp  luaconnection.hpp
src/monitors/: interactiveprintmonitor.hpp  luainteractiveprintmonitor.hpp
src/namespace/: namespace.cpp  namespace.hpp
src/parser/: clconst.hpp  lex.ll  parser.yy  yyltype.hpp
src/printers/: aspprinter.hpp  bddprinter.hpp  ecnfprinter.hpp  idp2printer.hpp  idpprinter.hpp  print.cpp  print.hpp  tptpprinter.hpp
src/structure/: AbstractStructure.cpp  AbstractStructure.hpp  Compound.hpp  DomainElement.hpp  DomainElementFactory.cpp  DomainElementFactory.hpp  HashElementTuple.hpp  InconsistentStructure.cpp  InconsistentStructure.hpp  MainStructureComponents.hpp  (+15 more)
tests/: CMakeLists.txt  ERRORtypedeftest.idp  EntailmentTests.cpp  Makefile.am  TestUtils.cpp  TestUtils.hpp  bddestimatortests.cpp  bddtests.cpp  blocksworld.idp  calculatedefinitionsWithXSBtest.idp  calculatedefinitionstest.idp  commandstest.idp  commandtests.cpp  cppinterface.cpp  cppinterface.hpp  cptest.idp  cptests.cpp  definitiontests.cpp  entailment.idp  generatortests.cpp  globaltest.idp  googletestsnippet.cpp  grounderfactorytests.cpp  insertiontests.cpp  internalmxtests.cpp  invartest.idp  lazymodelexpansion.idp  lazymxtests.cpp  mergetest.idp  meta-testfile.idp  modelexpansion.idp  modelexpansionwithoutpushingnegations.idp  modeliteration.idp  mx_output_regression.idp  mxlazymxtest.idp  mxlazynbofmodelstest.idp  mxlazysattest.idp  mxnbofmodelstest.idp  mxnbofmodelstestwithbounds.idp  mxnbofmodelstestwithcp.idp  (+39 more)
(+2033 files in other folders)
